--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #1F2937;
     color: whitesmoke;
     padding: 20px;
@@ -28,13 +28,24 @@ body {
     align-items: center;
     background-color: #1F2937;
     color: whitesmoke;
-    padding: 20px;
+    padding: 30px 45px 30px 45px;
+}
+
+.hero h2 {
+    font-size: 48px;
+    font-weight: 600;
+    color: #F9FAF8;
+    margin-bottom: 0px;
+}
+
+.hero p {
+    margin-top: 3px;
 }
 
 .hero-img {
     background-color: gray;
     margin: 30px;
-    padding: 10px;
+    padding: 70px;
     color: whitesmoke;
     text-align: center;
 
@@ -42,9 +53,9 @@ body {
 
 .hero button{
     color: white;
-    background-color: blue;
-    border-radius: 5px;
-    padding: 8px 20px 8px 20px;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 8px 25px 8px 25px;
     font-weight: 600;
 }
 
@@ -59,12 +70,13 @@ body {
 .info-body {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     gap: 20px;
 }
 
 .info-box {
-    border: 2px solid blue;
+    border: 2px solid #3882F6;
     border-radius: 10px;
     width: 80px;
     height: 80px;
@@ -72,4 +84,63 @@ body {
 
 .info {
     text-align: center;
+    max-width: 80px;
+    margin-bottom: 30px;
+    font-size: 9px;
+}
+
+.info p {
+    margin-top: 2px;
+}
+
+.quote {
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote-text {
+    max-width: 400px;
+    padding: 10px;
+}
+
+.quote-attribution {
+    text-align: right;
+}
+
+.cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882F6;
+    border-radius: 15px;
+    margin: 50px 10px;;
+    padding: 30px;
+    gap: 50px;
+    color: whitesmoke;
+    line-height: 20px;
+}
+
+.signup {
+    border: 2px solid whitesmoke;
+    background-color: transparent;
+    color: whitesmoke;
+    border-radius: 5px;
+    padding: 8px 20px;
+}
+
+.cta-box h4 {
+    margin-bottom: 0;
+}
+
+.cta-box p {
+    margin-top: 2px;
 }
